--- a/frontend/react/mini-marketplace/src/index.css
+++ b/frontend/react/mini-marketplace/src/index.css
@@ -1,68 +1,73 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    width: 100%;
+    height: 56px;
+    background: linear-gradient(to right, #f3f4f6, #f3f4f6);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.nav-links {
+    display: flex;
+    justify-content: center;
+    flex-grow: 1; 
+    margin-left: 70px; 
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.nav-right {
+    display: flex;
+    justify-content: flex-end; 
+    flex-grow: 0; 
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.nav-links a {
+    margin: 0 10px; 
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.nav-right a {
+    margin-right: 10px; 
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.nav a {
+    display: inline-flex;
+    height: 36px; 
+    align-items: center;
+    border-radius: 8px; 
+    padding: 8px 16px; 
+    font-size: 0.875rem; 
+    font-weight: 500; 
+    color: #1f2937; 
+    backdrop-filter: blur(12px); 
+    text-decoration: none;
+    font-family: inter; 
 }
+
+.nav a:hover {
+    background-color:white; 
+    color: #1f2937; 
+}
+
+.banner {    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 120px; 
+    background: linear-gradient(to right, #D8B4FE, #DBEAFE); 
+    font-family: inter;
+}
+
+.banner h1 {
+    font-size: 2rem; 
+    font-weight: 700; 
+}
+
+.banner p {
+    font-size: 1rem; 
+    font-weight: 500; 
+    color: #1f2937;
+}
+
+
+
