--- a/frontend/react/mini-marketplace/src/CSS-files/index.css
+++ b/frontend/react/mini-marketplace/src/CSS-files/index.css
@@ -145,30 +145,30 @@
 
 .profile-avatar {
     margin-right: 20px;
-    color: #4b5563; /* Gray-600 */
+    color: #4b5563; 
     font-size: 4em;
 }
 
 .profile-info h4 {
     font-size: 1.5em;
     margin: 0;
-    color: #1f2937; /* Gray-800 */
+    color: #1f2937;
 }
 
 .profile-info p {
-    color: #6b7280; /* Gray-500 */
+    color: #6b7280; 
 }
 
 .profile-section h4 {
     margin-top: 20px;
-    color: #111827; /* Gray-900 */
+    color: #111827; 
 }
 
 .profile-settings, .order-history {
     display: block;
     align-items: center;
     font-size: 16px;
-    color: #374151; /* Gray-700 */
+    color: #374151;
 }
 
 .profile-settings span, .order-history span {
@@ -179,37 +179,3 @@
     margin-top: 10px;
 }
 
-
-
-/* Profile Page */
-
-/*
-.profile {
-    display: grid;
-    width: 100%;
-    height: 100vh; 
-}
-
-.profile-header {
-    margin-top: 100px;
-    margin-left: 60px;
-}
-
-.profile-image {
-    font-size: 100px;
-    width: 100px; 
-    height: 100px; 
-    border-radius: 50%; 
-    margin-bottom: 16px; 
-}
-
-.profile-header-info {
-    display: flex;
-    flex-direction: column;
-    align-items:flex-start;
-    justify-content: center;
-}
-*/
-
-body {
-}
