--- a/frontend/react/mini-marketplace/src/CSS-files/index.css
+++ b/frontend/react/mini-marketplace/src/CSS-files/index.css
@@ -62,6 +62,7 @@
 
 .nav-search {
     height: 32px;
+    width: 100%;
     margin: 0 10px;
     margin-top: 8px;
     padding: 0 12px;
@@ -121,20 +122,19 @@
     color: #1f2937;
 }
 
+.main-content {
+    width: 95%;
+    padding: 20px;
+    margin: auto;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
 .profile-page {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-family: inter;
-}
-
-.main-content {
-    width: 100%;
-    max-width: 800px;
-    margin: auto;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 
 .profile-header {
@@ -179,3 +179,54 @@
     margin-top: 10px;
 }
 
+.toggle-saved-products-btn {
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-right: 10px;
+
+    background-color: #c4b5fd;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 5px;
+    color: white;
+}
+
+.toggle-saved-products-btn:hover {
+    background-color: #a78bfa;
+}
+
+.saved-products-panel {
+    position: fixed;
+    top: 64px;
+    right: 0;
+    width: 300px;
+    /*height: (100vh - 60px);*/
+    height: 100%;
+    background: white;
+    box-shadow: -5px 0 15px rgba(0,0,0,0.1);
+    padding: 20px;
+    transform: translateX(100%);
+    transition: transform 0.3s ease;
+}
+
+.saved-products-panel.visible {
+    transform: translateX(0);
+}
+
+.close-panel-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: #6b7280;
+    font-size: 1.5em;
+}
+
+.close-panel-btn:hover {
+    color: #1f2937;
+}
