update(cleanup): Update navbar, profile
Remove profile settings from Profile.tsx
Move dark mode button to NavbarLoggedIn.tsx
Update profile.css and index.css

--- a/frontend/react/mini-marketplace/src/CSS-files/index.css
+++ b/frontend/react/mini-marketplace/src/CSS-files/index.css
@@ -121,7 +121,7 @@ body, html {
     position: absolute;
     right: 0;
     top: 100%;
-    width: 150px;
+    width: 200px;
     background-color: white;
     box-shadow: 0 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -129,6 +129,8 @@ body, html {
     opacity: 0;
     visibility: hidden;
     transition: transform 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
+    display: flex;
+    flex-direction: column;
 }
 
 .dropdown-menu button {
@@ -179,8 +181,36 @@ body, html {
     visibility: visible;
 }
 
+.row-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.row-buttons button {
+    margin: 10px 10px;
+}
+
 #profileIcon {
     padding-right: 20px;
+}
+
+.dark-mode-button {
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-right: 10px;
+    background-color: #c4b5fd;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 5px;
+    color: white;
+}
+
+.logout-button {
+    background-color: #f87171;
 }
 
 .toggle-saved-products-btn {
