--- a/frontend/react/mini-marketplace/src/CSS-files/loginsignup.css
+++ b/frontend/react/mini-marketplace/src/CSS-files/loginsignup.css
@@ -13,15 +13,15 @@
 }
 
 .textFieldBox input {
-  height: 40px;
-  font-size: 25px;
+  height: 20px;
+  font-size: 15px;
+  padding: 10px;
   border-radius: 5px;
   border-color: #b1b1b1;
   color: #1f2937;
-  padding-left: 10px;
 }
 
-.textFieldBox {
+.textFieldBox { /* also for sing up page */
   /*background-color: blueviolet;*/
   margin: 0px 0px -1%;
 
@@ -80,6 +80,7 @@
 .error-message {
   font-size: 17px;
   text-align: center;
+  color: #a90000;
 }
 
 /*---------- SIGN UP CSS ----------------*/
