--- a/frontend/react/mini-marketplace/src/CSS-files/productview.css
+++ b/frontend/react/mini-marketplace/src/CSS-files/productview.css
@@ -87,6 +87,9 @@ h3, h4, button {
     font-size: 17px;
     font-style: italic;
     width: 90%;
+    border: 1px solid black;
+    padding: 20px;
+    border-radius: 10px;
 }
 
 .userProfile {
