new commit without application properties

--- a/frontend/react/mini-marketplace/src/CSS-files/productgallery.css
+++ b/frontend/react/mini-marketplace/src/CSS-files/productgallery.css
@@ -40,6 +40,7 @@
 }
 
 .ApplyFilterTagButton {
+    position: relative;
     z-index: 1;
     width: fit-content;
     font-size: 17px;
@@ -49,6 +50,7 @@
     border: 2px solid rgb(132, 132, 132);
     border-radius: 24px;
     background-color: #c4b5fd;
+    margin-left: 100px;
 }
 
 .FilterTagGallery {
@@ -98,7 +100,6 @@
 }
 
 .dropdown-filter ul.items {
-    width: 100%;
     font-family: inter;
     padding: 2px;
     display: none;
@@ -111,7 +112,6 @@
 }
 
 .dropdown-filter ul.items li {
-    width: fit-content;
     list-style: none;
 }
 
@@ -120,5 +120,5 @@
 }
 
 .dropdown-filter .visible .items {
-    list-style: none;
+    display: block;
 }
