--- a/frontend/react/mini-marketplace/src/CSS-files/profile.css
+++ b/frontend/react/mini-marketplace/src/CSS-files/profile.css
@@ -144,91 +144,19 @@ body[data-theme='dark'] .settings-item button:hover {
     margin: 0 auto;
 }
 
-.profile-settings, .order-history {
+.profile-settings {
     display: block;
     align-items: center;
     font-size: 16px;
     color: #374151;
 }
 
-.profile-settings span, .order-history span {
-    margin-left: 10px;
-}
-
-.settings-item {
-    margin-top: 10px;
-    margin-left: 10px;
-}
-
 
 /* OrderHistory.css */
 
 /* Parent class for history container and button */
-.order-history-parent {
-    position: relative;
-}
 
 /* Container for the order list */
-.order-history-container {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    transform: scaleY(0);
-    transform-origin: top;
-    transition: transform 0.3s ease-in-out;
-    overflow: hidden;
-    z-index: 1;
-    background-color: #f4f4f4;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    padding: 10px;
-    max-height: 300px;
-    overflow-y: auto;
-}
-
-.order-history-container.visible {
-     transform: scaleY(1);
-}
-
-body[data-theme='dark'] .order-history-container {
-    background-color: #424242;
-}
-
-.order-item {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.order-date {
-    margin-right: 10px;
-}
-
-.order-action-button button {
-    z-index: 2;
-    width: 100%;
-    height: 100%;
-    background-color: #c4b5fd;
-    color: #fff;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    margin-bottom: 0;
-}
-
-.order-action-button button:hover {
-    background-color: #a78bfa;
-}
-
-.order-history-icon {
-    margin-left: 10px;
-}
-
 
 /*
  * InterestsDropdown.tsx
@@ -302,7 +230,6 @@ body[data-theme='dark'] .interest-container {
 }
 
 .interests-container button {
-    margin-top: 10px;
     padding: 8px 16px;
     background-color: #c4b5fd;
     color: #fff;
